--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-date-picker": "^5.0.4",
     "react-native-element-dropdown": "^2.12.0",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-image-picker": "^7.1.2",
