--- a/package.json
+++ b/package.json
@@ -10,8 +10,27 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/datetimepicker": "^8.1.0",
+    "@react-navigation/drawer": "^6.6.15",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
+    "moment": "^2.30.1",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-date-picker": "^5.0.4",
+    "react-native-element-dropdown": "^2.12.0",
+    "react-native-gesture-handler": "^2.16.2",
+    "react-native-image-crop-picker": "^0.41.1",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-image-slider-box": "^2.0.7",
+    "react-native-paper": "^5.12.3",
+    "react-native-radio-buttons-group": "^3.1.0",
+    "react-native-reanimated": "^3.12.0",
+    "react-native-safe-area-context": "^4.10.3",
+    "react-native-screens": "^3.31.1",
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-xml2js": "^1.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
