--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "react-native": "0.72.6",
     "react-native-date-picker": "^5.0.4",
     "react-native-element-dropdown": "^2.12.0",
+    "react-native-file-viewer": "^2.1.5",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-image-picker": "^7.1.2",
     "react-native-image-slider-box": "^2.0.7",
+    "react-native-pdf-lib": "^1.0.0",
     "react-native-reanimated": "^3.12.0",
     "react-native-safe-area-context": "^4.10.3",
     "react-native-screens": "^3.31.1",
