--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "react-native-image-picker": "^7.1.2",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-paper": "^5.12.3",
+    "react-native-permissions": "^4.1.5",
     "react-native-radio-buttons-group": "^3.1.0",
     "react-native-reanimated": "^3.12.0",
     "react-native-safe-area-context": "^4.10.3",
     "react-native-screens": "^3.31.1",
+    "react-native-share": "^10.2.1",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-xml2js": "^1.0.3"
+    "react-native-xml2js": "^1.0.3",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
