--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-permissions": "^4.1.5",
     "react-native-radio-buttons-group": "^3.1.0",
     "react-native-reanimated": "^3.12.0",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.10.3",
     "react-native-screens": "^3.31.1",
     "react-native-share": "^10.2.1",
