--- a/package.json
+++ b/package.json
@@ -18,19 +18,22 @@
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-date-picker": "^5.0.4",
+        "react-native-date-picker": "^5.0.4",
+    "react-native-document-picker": "^9.3.0",
     "react-native-element-dropdown": "^2.12.0",
     "react-native-file-viewer": "^2.1.5",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-image-picker": "^7.1.2",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-paper": "^5.12.3",
+    "react-native-pdf": "^6.7.5",
     "react-native-radio-buttons-group": "^3.1.0",
     "react-native-reanimated": "^3.12.0",
     "react-native-safe-area-context": "^4.10.3",
     "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-xml2js": "^1.0.3"
+    "react-native-xml2js": "^1.0.3",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
